Moving the soapVersion property to the binding. It resided in AxisService untill now but got to move it as its a binding specific property. Removing setAppendAddressToEPR from stub (It was there to handle httpLocation property) as its better to handle it at the URLTemplating util. Sticking the httpLocation property as a property to the operationContext. Fixing XFormURLEncodedBuilder to handle escaping in templates Updating UTLTemplatingUtil to deal with correct encoding mechanism depending on where the parameter appears